--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -18,12 +18,12 @@
   <table class='table table-responsive'>
     <thead>
       <tr>
-        <td width='100'>Full Name</td>
+        <td width='150'>Full Name</td>
         <td>Email</td>
-        <td>Phone Number</td>
-        <td align="center">Alert by</td>
+        <td>Phone</td>
+        <td align="center">Alert</td>
         <td>Groups</td>
-        <td align="center"> Projects & Alerts</td>
+        <td align="center"> Projects/Alerts</td>
         <td class='td-last'>Action</td>
       </tr>
     </thead>
