--- a/app/views/alerts/_alert_groups.html.erb
+++ b/app/views/alerts/_alert_groups.html.erb
@@ -1,5 +1,5 @@
 <div class="header-wrapper clearfix">
-  <div class="pull-left"><h3 class='header-title'>Registered groups</h3></div>
+  <div class="pull-left"><h3 class='header-title'>Alert to Groups</h3></div>
 
   <div class="pull-right" >
     <% if project_with_role.has_admin_role? %>
