--- a/app/views/alerts/_alert_keywords.html.erb
+++ b/app/views/alerts/_alert_keywords.html.erb
@@ -1,5 +1,5 @@
 <div class="header-wrapper clearfix">
-  <div class="pull-left"><h3 class='header-title'>Registered keywords</h3></div>
+  <div class="pull-left"><h3 class='header-title'>Keywords to Search for</h3></div>
 
   <div class="pull-right">
     <% if project_with_role.has_admin_role? %>
