fix url redirect from http to https

--- a/app/views/feed_entries/show.html.erb
+++ b/app/views/feed_entries/show.html.erb
@@ -26,4 +26,4 @@
 %>
 
 <%#= content_tag :iframe, nil, src: data_as_url(highlight), style: 'border: none; width: 100%; min-height: 500px;' %>
-<%= content_tag :iframe, nil, style: 'border: none; width: 100%; min-height: 500px;', srcdoc: highlight  %>
+<%= content_tag :iframe, nil, style: 'border: none; width: 120%; margin-left: -10%; min-height: 500px;', srcdoc: highlight  %>
