--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <%= favicon_link_tag 'favicon.ico' %>
+    <%= render 'layouts/shared/default_page_meta' %>
+
+    <%= content_for(:meta_tag) %>
+
 
     <link href="/favicon.ico?version=20150504102347" type="image/x-icon" rel="icon">
     <title><%= content_for?(:title) ? yield(:title) : ENV['APP_NAME'] %></title>
