--- a/app/views/channels/_form.html.erb
+++ b/app/views/channels/_form.html.erb
@@ -84,7 +84,7 @@
 <%=form_for @channel, html: { class: 'form form-inline'} do |f| %>
   <div class="panel panel-info">
     
-    <div class="panel-heading setup-flow clearfix">
+    <div class="panel-heading setup-flow clearfix" style='cursor:pointer;'>
       <div class="pull-left" style='width: 60px; font-size: 40px; margin-top: 10px;'>
         <i class='glyphicon glyphicon-cloud'></i>
       </div>
