--- a/app/views/layouts/sign_in.html.erb
+++ b/app/views/layouts/sign_in.html.erb
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <%= render 'layouts/shared/google_search_console' %>
     <%= favicon_link_tag 'favicon.ico' %>
 
     <title><%= content_for?(:title) ? yield(:title) : "Alert system" %></title>
@@ -32,6 +33,7 @@
     <%= javascript_include_tag "application" %>
     <%= render 'layouts/shared/notification' %>
     <%= render 'layouts/shared/config' %>
+    <%= render 'layouts/shared/google_analytic' %>
 
   </body>
 </html>
