--- a/app/views/channel_accesses/index.html.erb
+++ b/app/views/channel_accesses/index.html.erb
@@ -5,12 +5,15 @@
 
 
 <div class='header-wrapper clearfix'>
-  <div class="pull-right"> <%= render 'search_user' %> </div>
+
   <div class='pull-left'>
     <h3 class='header-title'> List of all projects </h3>
   </div>
+  <div class="pull-right col-md-5" style="padding-right: 0px">
+    <%= render 'search_user' %>
+  </div>  
+  
 </div>
-
 <div class="panel panel-info">
   <table class='table table-responsive'>
     <thead>
