--- a/app/views/permissions/index.html.erb
+++ b/app/views/permissions/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="header-wrapper clearfix">
   <div class="pull-left"> <h3 class='header-title'> List of Permissions</h3> </div>
-  <div class="pull-right"> <%= render 'search_user' %> </div>
+  <div class="pull-right col-md-5" style="padding-right: 0px"> <%= render 'search_user' %> </div>
 </div>
 
 <div class="panel panel-info">
