--- a/app/views/shared/_project_alert.html.erb
+++ b/app/views/shared/_project_alert.html.erb
@@ -7,4 +7,9 @@
   <li role="presentation" class="<%= active_tab_for_index(2, project_tab) %>">
     <%= link_to "Alerts", url_tab2 %>
   </li>
+
+  <li role="presentation" class="<%= active_tab_for_index(3, project_tab) %>">
+    <%= link_to "SMS Setting", url_tab3 %>
+  </li>
+
 </ul>
