--- a/app/views/projects/sms_setting.html.erb
+++ b/app/views/projects/sms_setting.html.erb
@@ -10,38 +10,48 @@
            url_tab3: sms_setting_project_path(@project_with_role.object)
             %>
 <%= panel "SMS Settings" do %>
-  <%=simple_form_for(@project_with_role.object, html: { class: 'form-inline form'}) do |f| %>
+  <%=form_for(@project_with_role.object, html: { class: 'form-inline form'}) do |f| %>
 
     <% input_attrs = @project_with_role.has_admin_role? ? {} : {disabled: 'disabled'} %>
     
-    <div class="form-group boolean cb-block ">
-      <label>SMS Channels</label>           
-      <% @project_with_role.object.accessible_channels.each do |channel| %>
-          <label class="boolean">
-            <%= check_box_tag :channels, channel.id, @project_with_role.object.channels.include?(channel) %>
-            <%= channel.name %>
-          </label>
-      <% end %>
+    <div class="form-group horizontal-group">
+      <label>SMS Channels</label>
+        <div class="checkbox-list" >             
+          <% @project_with_role.object.accessible_channels.each do |channel| %>
+            <div>
+              <label>
+                <%= f.check_box(:channels, { :multiple => true }, channel.id) %>
+                <%= channel.name %>
+              </label>
+            </div>
+          <% end %>
+        </div>
     </div>
 
-    <div class='from-group'>
+    <div class='form-group'>
       <label>SMS alert time</label>
       <div class="input-group">
         <span class="input-group-addon">From</span>
-        <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+        <%= f.text_field :sms_alert_started_at, class: "form-control hour-picker", autocomplete: :off, placeholder: "00:00"%>
       </div>
 
       <div class="input-group">
         <span class="input-group-addon">To</span>
-        <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+        <%= f.text_field :sms_alert_ended_at, class: "form-control hour-picker", autocomplete: :off,
+                       placeholder: "00:00"%>
       </div>
     </div>
 
-    <div class='from-group'>
+    <div class='form-group'>
       <label>SMS template</label>
-      <textarea class="form-control" rows="3"></textarea>
-      <%#=f.input :sms_template, as: :text, input_html: {class: 'form-control', rows: 6, cols: 40}.merge(disabled) %>
+      <%=f.text_area :sms_alert_template, as: :text, class: 'form-control', rows: 6, cols: 40 %>
     </div>
+
+    <div class='form-group'>
+      <label></label>
+      <%=sms_template_params_for(:sms_alert_template) %>
+    </div>
+
 
     <% if @project_with_role.has_admin_role? %>
       <div class='form-group form-action-group'>
