enhance view and enable save on sms alert setting

--- a/app/views/projects/sms_setting.html.erb
+++ b/app/views/projects/sms_setting.html.erb
@@ -14,18 +14,20 @@
 
     <% input_attrs = @project_with_role.has_admin_role? ? {} : {disabled: 'disabled'} %>
     
+
+
     <div class="form-group horizontal-group">
       <label>SMS Channels</label>
-        <div class="checkbox-list" >             
-          <% @project_with_role.object.accessible_channels.each do |channel| %>
-            <div>
-              <label>
-                <%= f.check_box(:channels, { :multiple => true }, channel.id) %>
-                <%= channel.name %>
-              </label>
-            </div>
-          <% end %>
-        </div>
+      <div class="checkbox-list">
+        <%= f.collection_check_boxes :channel_ids, @project_with_role.object.accessible_channels, :id, :name do |channel| %>
+          <div>
+          <%= channel.label(class: "boolean") do  %>
+            <%= channel.check_box %>
+            <%= channel.text %>
+          <% end -%>
+          </div>
+        <% end -%>
+      </div>
     </div>
 
     <div class='form-group'>
@@ -44,12 +46,12 @@
 
     <div class='form-group'>
       <label>SMS template</label>
-      <%=f.text_area :sms_alert_template, as: :text, class: 'form-control', rows: 6, cols: 40 %>
+      <%= f.text_area :sms_alert_template, as: :text, class: 'form-control', rows: 6, cols: 40 %>
     </div>
 
     <div class='form-group'>
       <label></label>
-      <%=sms_template_params_for(:sms_alert_template) %>
+      <%=sms_template_params_for(:project_sms_alert_template) %>
     </div>
 
 
