fix tab view error on new project

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -6,7 +6,8 @@
 <%= render 'shared/project_alert',
            project_tab: 1,
            url_tab1: new_project_path,
-           url_tab2: 'javascript:void(0)'
+           url_tab2: 'javascript:void(0)',
+           url_tab3: 'javascript:void(0)'
             %>
 
 <%= panel "New Project" do %>
