--- a/app/views/channel_accesses/_form.html.erb
+++ b/app/views/channel_accesses/_form.html.erb
@@ -1,4 +1,4 @@
-<%=simple_form_for(@project_channel, html: { class: 'form-inline form'}) do |f| %>
+<%=simple_form_for(@channel_access, html: { class: 'form-inline form'}) do |f| %>
 
   <div class="form-group">
     <label class="control-label" style="margin-right: 0.2em;">User</label>
