--- a/app/views/channel_accesses/new.html.erb
+++ b/app/views/channel_accesses/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:title) { "Channel accesses"} %>
-<% breadcrumb_buffer([{"Channel accesses": project_channels_path}, {"New Accessibility": nil}]) %>
+<% breadcrumb_buffer([{"Channel accesses": channel_accesses_path}, {"New Accessibility": nil}]) %>
 
 <%= panel "New Accessibility" do %>
   <%= render 'form' %>
