change label name for channel access

--- a/app/views/channel_accesses/index.html.erb
+++ b/app/views/channel_accesses/index.html.erb
@@ -1,6 +1,6 @@
-<% content_for(:title) { "Channel accesses"} %>
+<% content_for(:title) { "National gateway"} %>
 <% breadcrumb_buffer([{
-    "Channel accesses": nil
+    "National gateway": nil
   }]) %>
 
 <div class='header-wrapper clearfix'>
@@ -9,7 +9,7 @@
     <h3 class='header-title'> List of all projects </h3>
   </div>
   <div class="pull-right">
-    <%= link_new 'New Accessibility', new_channel_access_path %>
+    <%= link_new 'Assign new project to national gateway', new_channel_access_path %>
   </div>  
 </div>
 
