--- a/app/views/channel_accesses/new.html.erb
+++ b/app/views/channel_accesses/new.html.erb
@@ -1,7 +1,7 @@
-<% content_for(:title) { "Channel accesses"} %>
-<% breadcrumb_buffer([{"Channel accesses": channel_accesses_path}, {"New Accessibility": nil}]) %>
+<% content_for(:title) { "National gateway"} %>
+<% breadcrumb_buffer([{"National gateway": channel_accesses_path}, {"New Accessibility": nil}]) %>
 
-<%= panel "New Accessibility" do %>
+<%= panel "Assign new project to national gateway" do %>
   <%= render 'form' %>
 <% end %>
 
