--- a/app/views/channel_accesses/_form.html.erb
+++ b/app/views/channel_accesses/_form.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div class="form-group">
-    <label class="control-label" style="margin-right: 0.2em;">Project</label>
+    <label class="control-label required" style="margin-right: 0.2em;"><abbr>*</abbr>Project</label>
     <%= text_field_tag 'project_name', nil, class: 'form-control', data: {url: list_projects_path} %>
     <%=f.input :project_id, as: :hidden %>
   </div>  
