--- a/app/views/projects/sms_setting.html.erb
+++ b/app/views/projects/sms_setting.html.erb
@@ -10,15 +10,21 @@
            url_tab3: sms_setting_project_path(@project_with_role.object)
             %>
 <%= panel "SMS Settings" do %>
-  <%=form_for(@project_with_role.object, html: { class: 'form-inline form'}) do |f| %>
+  <%=form_for(@project_with_role.object, url: update_sms_setting_project_path, method: 'POST', html: { class: 'form-inline form'}) do |f| %>
     <% input_attrs = @project_with_role.has_admin_role? ? {} : {disabled: 'disabled'} %>
+
     <div class="form-group horizontal-group">
       <label>SMS Channels</label>
       <div class="checkbox-list">
-        <%= f.collection_check_boxes :channel_ids, @project_with_role.object.accessible_channels, :id, :name do |channel| %>
+        <%= f.collection_check_boxes :channel_ids, @project_with_role.object.accessible_channels, :id, :name, include_hidden: false do |channel| %>
           <div>
           <%= channel.label do  %>
-            <%= channel.check_box({checked: false}) %>
+            <% if @project_with_role.object.is_active_channel? channel.object %>
+              <%= channel.check_box({checked: true}) %>
+            <% else %>
+              <%= channel.check_box({checked: false}) %>
+            <% end -%>
+            
             <%= channel.text %>
           <% end -%>
           </div>
