refactor code for channel access

--- a/app/views/channel_accesses/index.html.erb
+++ b/app/views/channel_accesses/index.html.erb
@@ -6,7 +6,7 @@
 <div class='header-wrapper clearfix'>
 
   <div class='pull-left'>
-    <h3 class='header-title'> List of all projects </h3>
+    <h3 class='header-title'> List of projects connect with national gateway </h3>
   </div>
   <div class="pull-right">
     <%= link_new 'Assign new project to national gateway', new_channel_access_path %>
