fixes #102828002 labels adjustment on the Permission Tab

--- a/app/views/permissions/_channel_template.html.erb
+++ b/app/views/permissions/_channel_template.html.erb
@@ -4,7 +4,7 @@
         <span style='padding-left: 10px; font-weight:bold;'>
           <i class='glyphicon glyphicon-triangle-right'> </i>
           <i class='glyphicon glyphicon-triangle-bottom' style='display: none'> </i>
-          Channels
+          SMS Channels
         </span>
       </div>
 
