--- a/app/views/permissions/index.html.erb
+++ b/app/views/permissions/index.html.erb
@@ -1,18 +1,18 @@
-<% content_for(:title) { "Permissions"} %>
-<% breadcrumb_buffer([{ "Permissions": nil}]) %>
+<% content_for(:title) { "User Permission"} %>
+<% breadcrumb_buffer([{ "User Permission": nil}]) %>
 
 <div class="header-wrapper clearfix">
-  <div class="pull-left"> <h3 class='header-title'> List of Permissions</h3> </div>
-  <div class="pull-right"> <%= render 'search_user' %> </div>
+  <div class="pull-left"> <h3 class='header-title'> Permission to manage projects and SMS channels</h3> </div>
+  <div class="pull-right col-md-5" style="padding-right: 0px"> <%= render 'search_user' %> </div>
 </div>
 
 <div class="panel panel-info">
   <table class='table table-responsive table-permission'>
     <thead>
       <tr>
-        <td class="permission-first"> User > Projects > Channels</td>
+        <td class="permission-first"> User</td>
         <td class="role-type" style="margin-left: 25px;"> None </td>
-        <td class="role-type"> Read </td>
+        <td class="role-type"> View Only </td>
         <td class="role-type"> Admin </td>
       </tr>
     </thead>
