fixes #102833012 remove warning dialog

--- a/app/views/layouts/_nav_menu.html.erb
+++ b/app/views/layouts/_nav_menu.html.erb
@@ -25,10 +25,7 @@
               <li> </li>
 
               <li>
-                <%= link_to 'Sign Out', sign_out_path(), class: 'btn-delete', method: :delete, 
-                            data: {confirm: 'Are you sure to sign out ? ',
-                                   confirm_explain: ' ',
-                                   btn_confirm: 'Confirm Signout'} %>
+                <%= link_to 'Sign Out', sign_out_path(), class: 'btn-delete', method: :delete %>
               </li>
             </ul>
 
