fixes #102833942 update reset password dialog text

--- a/app/views/users/password.html.erb
+++ b/app/views/users/password.html.erb
@@ -7,10 +7,10 @@
     <%=f.input :old_password, required: true, label: 'Old Password', 
                input_html: {class: 'form-control', autocomplete: :off } %>
 
-    <%=f.input :password, required: true,
+    <%=f.input :password, label: "New password", required: true,
                input_html: {class: 'form-control', autocomplete: :off } %>
 
-    <%=f.input :password_confirmation, required: true, label: 'Confirm',
+    <%=f.input :password_confirmation, label: "Confirm new password", required: true,
                input_html: {class: 'form-control', autocomplete: :off } %>
 
 
