fixes #104595814 shared group is repeated

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -35,7 +35,7 @@
 <%= paginate_for(@groups) %>
 
 
-<% if @group_permissions.size > 0 %>
+<% if @group_permissions.length > 0 %>
   <br />
   <br />
   <br />
