--- a/app/views/group_messages/new.html.erb
+++ b/app/views/group_messages/new.html.erb
@@ -18,7 +18,15 @@
 
     <div class='form-group'>
       <label class="control-label required" style="vertical-align: top">Type a message here</label>
-      <%= f.text_area :message, as: :text, class: 'form-control', rows: 6, cols: 40 %>
+      <%= f.text_area :message, as: :text, class: 'form-control', rows: 6, cols: 40, maxlength: 140 %>
+    </div>
+
+    <div class="form-group">
+      <label></label>
+      <div class="form-control bar">
+        <div id="counter-bar"></div>
+      </div>
+      <span id="counter">140 chars left</span>
     </div>
 
     <div class='form-group form-action-group'>
