--- a/app/views/group_messages/new.html.erb
+++ b/app/views/group_messages/new.html.erb
@@ -5,7 +5,7 @@
   <%=simple_form_for(@group_message, html: { class: 'form-inline form'}) do |f| %>
 
     <div class="form-group horizontal-group">
-      <label class="required" style="vertical-align: top">Groups</label>
+      <label class="required" style="vertical-align: top"><abbr>*</abbr>Groups</label>
       <div class="checkbox-list ">
         <%= f.collection_check_boxes :receiver_groups, current_user.groups, :id, :name, include_hidden: false do |group| %>
           <%= group.label do  %>
