disable alert and sms setting tab for new project

--- a/app/assets/stylesheets/base/object.scss
+++ b/app/assets/stylesheets/base/object.scss
@@ -245,3 +245,13 @@ em.highlight {
 .checkbox-list span{
   display: block;
 }
+
+
+.nav-tabs .disabled{
+  background-color: #F5F5F5;
+  opacity: 0.5;
+}
+
+.nav-tabs .disabled a{
+  pointer-events: none;
+}
