--- a/app/views/alerts/matched.html.erb
+++ b/app/views/alerts/matched.html.erb
@@ -7,7 +7,8 @@
 <%= render 'shared/project_alert',
             url_tab1: edit_project_path(@project_with_role.object),
             url_tab2: project_alerts_path(@project_with_role.object),
-            project_tab: 2 %>
+            project_tab: 2,
+            is_enable_alert_and_sms_tab: '' %>
 
 
 <h3> Alerts that matched criteria for </h3>
