--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -6,7 +6,8 @@
            project_tab: 1,
            url_tab1: edit_project_url(@project_with_role.object),
            url_tab2: project_alerts_path(@project_with_role.object),
-           url_tab3: sms_setting_project_path(@project_with_role.object)
+           url_tab3: sms_setting_project_path(@project_with_role.object),
+           is_enable_alert_and_sms_tab: ''
             %>
 
 <%= panel "Edit Project" do %>
