--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -7,7 +7,8 @@
            project_tab: 1,
            url_tab1: new_project_path,
            url_tab2: 'javascript:void(0)',
-           url_tab3: 'javascript:void(0)'
+           url_tab3: 'javascript:void(0)',
+           is_enable_alert_and_sms_tab: 'disabled'
             %>
 
 <%= panel "New Project" do %>
