changes date picker interface

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,12 +8,10 @@
 @import "base/reset";
 @import "base/object";
 
-@import "bootstrap-timepicker";
 @import "bootstrap-switch";
-@import "bootstrap-timepicker-responsive";
 
 @import "shared/nav_menu";
-@import "shared/time_picker";
+@import "shared/jquery.timepicker";
 
 @import "sign_in/layout";
 @import "channel/form";
