adjusts the label on recipients and groups view

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -5,7 +5,7 @@
 
 <div class='header-wrapper clearfix'>
   <div class='pull-left'>
-    <h3 class='header-title'> List of Recipients</h3>
+    <h3 class='header-title'> My Recipients</h3>
   </div>
 
   <div class='pull-right'>
