--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -5,7 +5,7 @@
 
 <div class=' header-wrapper clearfix'>
   <div class='pull-left'>
-    <h3 class='header-title'> List of My Groups </h3>
+    <h3 class='header-title'> My Groups </h3>
   </div>
 
   <div class='pull-right'>
